# coordinator-services-and-shared-libraries

./: .bazelrc  .gitignore  .tflint.hcl  BUILD  CHANGELOG.md  METRICS.md  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  go.work  go.work.sum  version.txt
build-scripts/: DEBIAN_CONTAINER_DIGEST
build-scripts/aws/: README.md  build_coordinator_services.sh  buildspec.yml
build-scripts/aws/build-container/: Dockerfile
build-scripts/aws/pbs_auth_lambda/: BUILD  create_pbs_auth_handler_package.sh
build-scripts/aws/terraform/: codebuild.auto.tfvars_sample  codebuild.tf  codebuild_variables.tf
build-scripts/gcp/: README.md  build_coordinator_services.sh  build_mpkhs_services.sh  build_pbs_services.sh  cloudbuild.yaml
build-scripts/gcp/build-container/: Dockerfile  cloudbuild.yaml
build_defs/: container_dependencies.bzl  packer.bzl  release.bzl  scp_dependencies.bzl
build_defs/aws/enclave/: allocator.bzl  container.bzl  enclave_ami.bzl  generic_enclave_ami.pkr.hcl
build_defs/aws/enclavewatcher/: BUILD  enclave-watcher.service  enclave_watcher.sh
build_defs/aws/kmstool/: BUILD  dockerfile_git_shallow_clone.patch  kmstool.BUILD  kmstool.patch
build_defs/cc/: benchmark.bzl  curl.BUILD  libjemalloc.BUILD  moodycamel.BUILD  nghttp2.BUILD  nghttp2.patch  nlohmann.BUILD  rapidjson.BUILD  roma.bzl  sdk.bzl  sdk_common.bzl  sdk_source_code.bzl  sdk_static_lib.bzl  v8.BUILD  v8.bzl  zlib.BUILD
build_defs/cc/aws/: aws_c_common.BUILD  aws_c_common_static_lib.BUILD  aws_c_common_static_lib.bzl  aws_c_event_stream.BUILD  aws_checksums.BUILD  aws_nitro_enclaves_sdk_source_code_deps.bzl  aws_nitro_enclaves_sdk_static_lib.BUILD  aws_nitro_enclaves_sdk_static_lib_deps.bzl  aws_sdk_cpp_deps.bzl  aws_sdk_cpp_source_code.BUILD  aws_sdk_cpp_source_code_deps.bzl  aws_sdk_cpp_static_lib.BUILD  aws_sdk_cpp_static_lib_deps.bzl  s2n_tls.BUILD
build_defs/cc/shared/: bazel_rules_cpp.bzl  bazelisk.bzl  boringssl.bzl  cc_utils.bzl  google_cloud_cpp.bzl  gperftools.bzl  gtest.bzl  libpsl.bzl  nghttp2.bzl  opentelemetry_cpp.bzl  re2_cpp.bzl  rules_boost.patch  sandboxed_api.bzl
build_defs/go/: go_repositories.bzl
build_defs/shared/: absl.bzl  bazel_features.bzl  bazel_rules_closure.bzl  bazel_rules_closure.patch  bazel_rules_java.bzl  bazel_rules_pkg.bzl  bazel_rules_proto.bzl  bazel_rules_python.bzl  docker_compose.bzl  enclaves_kmstools.bzl  envoy_api.bzl  golang.bzl  google_api_core.bzl  google_java_format.bzl  grpc.bzl  java_grpc.bzl  platforms.bzl  protobuf.bzl  protobuf_javascript.bzl  terraform.bzl  variables.bzl
build_defs/tink/: tink_defs.bzl
cc/: .clang-format  BUILD  CPPLINT.cfg
cc/aws/: BUILD
cc/aws/proxy/: BUILD  readme.md  vsockproxy.service
cc/core/interface/: BUILD  async_context.h  async_executor_interface.h  authorization_proxy_interface.h  authorization_service_interface.h  blob_storage_provider_interface.h  checkpoint_service_interface.h  config_provider_interface.h  configuration_keys.h  dependency_injection_service_interface.h  errors.cc  errors.h  http_client_interface.h  http_request_response_auth_interceptor_interface.h  http_request_route_resolver_interface.h  http_request_router_interface.h  http_server_interface.h  http_types.h  initializable_interface.h  journal_service_interface.h  lease_manager_interface.h  logger_interface.h  message_router_interface.h  metrics_def.h  nosql_database_provider_interface.h  partition_interface.h  partition_lease_manager_interface.h  partition_manager_interface.h  partition_namespace_interface.h  partition_types.h  remote_transaction_manager_interface.h  service_interface.h  streaming_context.h  token_fetcher_interface.h  token_provider_cache_interface.h  traffic_forwarder_interface.h  transaction_command_serializer_interface.h  transaction_manager_interface.h  transaction_protocol_interface.h  transaction_request_router_interface.h  (+2 more)
cc/core/test/: BUILD  errors_test.cc  scp_test_base.h  service_interface_test.cc  test_config.h  type_def_test.cc
cc/core/thread/: BUILD  clock.h  periodic_closure.cc  periodic_closure.h  periodic_closure_test.cc
cc/cpio/proto/: BUILD  config_client.proto  cpio_service.proto  crypto_client.proto
cc/cpio/test/: BUILD  aws_cpio_lib_integration_test.cc
cc/pbs/interface/: BUILD  budget_key_interface.h  budget_key_provider_interface.h  budget_key_resolver_interface.h  budget_key_timeframe_manager_interface.h  cloud_platform_dependency_factory_interface.h  configuration_keys.h  consume_budget_interface.h  front_end_service_interface.h  metrics_def.h  pbs_client_interface.h  pbs_partition_interface.h  pbs_partition_manager_interface.h  pbs_transactional_client_interface.h  type_def.h
cc/process_launcher/: BUILD  helpers.bzl  launcher.cc
cc/public/cpio/: README.md
cc/public/tools/: build_reproducible_container_image.sh
cc/roma/interface/: BUILD  function_binding_io.proto  ipc_channel_interface.h  ipc_manager_interface.h  roma.h
coordinator/aws/docs/: README.md
coordinator/db/: BUILD  changelog.cloudspanner.yaml  liquibase.sh
coordinator/db/changesets/: 0001_create_keysets_table.sql
coordinator/keygeneration/aws/: BUILD  build_defs.bzl
coordinator/keygeneration/gcp/: BUILD  build_defs.bzl
coordinator/keyhosting/gcp/: BUILD  build_defs.bzl
coordinator/keystorage/gcp/: BUILD  build_defs.bzl
coordinator/privacybudget/gcp/: BUILD
coordinator/terraform/aws/: BUILD
coordinator/terraform/gcp/: BUILD
docs/: build-coordinator-services.md
go/: go.work
go/spanner_backup/: BUILD  backups.go  backups_test.go  go.mod  go.sum
licenses/: 3-clause bsd license - bsd-3-clause.html  BUILD  apache 2.0 - apache-2.0.html  apache license 2.0 - license-2.0.html  apache license, version 2.0 - apache2.0.html  bsd - license.html  bsd new license - bsd-3-clause.html  edl 1.0 - edl-v10.html  new bsd license - bsd-license.html  the mit license - license.html  the mit license - mit-license.html  the mit license - mit.html
operator/aws/: BUILD  release.sh
operator/aws/docs/: BUILD  README.md
operator/gcp/: BUILD
operator/protocol/avro/: BUILD  (+2 more)
testing/build_defs/: avro.bzl
(+3597 files in other folders)
